--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,8 @@
 
     <body>
         <h1> Lasagna </h1>
+        <img src="../img/maxresdefault.jpg" alt="a closeup of a lasagna, with fingers holding 
+        it from the top and a knife cutting it in half" height="720" width="1280">
     </body>
 
 </html>
