Add lists of ingredients needed for every part of the recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -16,6 +16,43 @@
              homemade sauce that will make you cry (in a good way).</p>
         <p>This is  the only recipe you need.</p> 
         <p>It's lasagna, you just can't go wrong with it.</p>
+
+        <h2> Ingredients </h2>
+        <ul>
+            <li>1lb (450g) ground beef (chuck)</li>
+            <li>1 lb (450g) ground pork (pork shoulder)</li>
+            <li>1 medium sized onion</li>
+            <li>1 rib of celery</li>
+            <li>1 medium sized onion</li>
+            <li>2 carrots</li>
+            <li>2 cloves garlic thinly sliced (I also added this and forgot to mention it)</li>
+            <li>3 Tbsp (60g) tomato paste</li>
+            <li>1 cup (236ml) white wine</li>
+            <li>1.5 cups (354ml) chicken stock</li>
+            <li>1- 17.6 oz(500g) container of crushed tomatoes</li>
+            <li>Salt to taste</li>
+        </ul>
+        
+        <h3> Homemade Fresh Pasta: </h3>
+        <ul>
+            <li>3 cups (480g) all purpose flour (or 00 tipo)</li>
+            <li>5 whole eggs</li>
+            <li>1/2 tsp (3g) fine sea salt</li>
+            <li>Water if needed</li>
+        </ul>
+
+        <h3> For assembly you'll need: </h3>
+        <ul>
+            <li>A 16oz tub whole milk ricotta</li>
+            <li>Parmigiana reggiano</li>
+            <li>*optional* fontina</li>
+            <li>Fresh mozzarella (two 500g balls should do)</li>
+            <li>Fresh basil</li>
+            <li>13 slices of prosciutto di parma</li>
+            <li>Lasagna pasta sheets</li>
+        </ul>
+        
+
     </body>
 
 </html>
