--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,12 +11,14 @@
         <img src="../img/maxresdefault.jpg" alt="a closeup of a lasagna, with fingers holding 
         it from the top and a knife cutting it in half" height="720" width="1280">
 
+        <!--The recipe's description-->
         <h2> Description </h2>
         <p>I'm talking homemade lasagna with fresh pasta, fresh ground meat (ground  at home),
              homemade sauce that will make you cry (in a good way).</p>
         <p>This is  the only recipe you need.</p> 
         <p>It's lasagna, you just can't go wrong with it.</p>
 
+        <!--The ingredients-->
         <h2> Ingredients </h2>
         <ul>
             <li>1lb (450g) ground beef (chuck)</li>
@@ -51,6 +53,27 @@
             <li>13 slices of prosciutto di parma</li>
             <li>Lasagna pasta sheets</li>
         </ul>
+
+        <!--The steps-->
+        <h2> Steps: </h2>
+        <ol>
+            <li>To make the sauce, take 1lb of ground beef and 1lb of ground pork and mix together in a bowl.</li>
+            <li>Then in a large heavy-bottomed pot over medium-high heat, add in enough oil to coat the bottom. Take about half of your meat mixture and pat it into a large thin patty. Sear your meat in the pot for about 2-3 minutes on both sides. Repeat that until you use all of your meat. Remove meat from the pan and set it off to the side.</li>
+            <li>In that same pan, cook off 4 ounces of guanciale or pancetta over medium heat until it releases its fat and fried itself in it. Once that’s done frying, add to that pot 1 medium onion finely diced, 1 finely diced celery, and 2 finely diced carrots. Give it a stir and let it saute over medium heat for about 2 minutes or until all the vegetables turn translucent.</li>
+            <li>Then add in 3 tablespoons of tomato paste. Stir and let it cook in the pot until it begins to stick to the bottom. Add in 1 cup of white wine or water and give it a stir. Let the mixture simmer until it’s reduced by about half. Then add in 1 ½ cups of chicken stock, 17.6 ounces of crushed tomatoes, and your cooked meat. Allow that to simmer for about 1-2 hours or until it’s reduced and mostly meaty.</li>
+            <li>To make your own pasta, add 3 cups of all-purpose flour, ½ teaspoon of fine sea salt into a bowl and whisk together. Make a well in the flour mixture and add in 5 whole eggs. Start whisking together with a fork, slowly bringing in the flour from the sides. Once it starts to come together, begin kneading.</li>
+            <li>Once you get a nice cohesive dough, knead until it’s relatively smooth. Wrap it in plastic wrap and let it rest at room temperature for about an hour.</li>
+            <li>After your dough has rested, divide into 4 equal parts and flatten each piece into a rough oveal. Run it through a pasta roller at the thickest setting; making sure to dust it with flour. Keep rolling that dough on a thinner and thinner setting one at a time until you reach the final setting.</li>
+            <li>Bring a large pot of water to a boil and season it generously with salt. </li>
+            <li> 
+                <ul>
+                    <li>For fresh noodles, blanch them in the water for about 10 seconds and pull them out immediately.</li>
+                    <li>If you’re using premade noodles, cook your noodles in the pot until it’s very very al dente.</li>
+                </ul>
+            </li>
+            <li>To assemble your lasagna, first grease a 9x13 inch baking pan with butter. Apply a very thin layer of sauce in the bottom to prevent sticking. Then layer your lasagna by placing a layer of pasta sheets, ½ cup of whole milk ricotta, fresh basil leaves, prosciutto di parma, your meat sauce and then a layer of parmigiano-reggiano, fontina and mozzarella. Repeat this layering process until the pan is full.</li>
+            <li>Top your lasagna with cheese and place on a baking sheet. Put your lasagna in the oven preheated to 350 degrees Fahrenheit and cook for one hour or until nice and brown. Remove from the oven and let it rest for 20-25 minutes.</li>
+        </ol>
         
 
     </body>
