Fix the link to the risotto recipe
The link was written "Risotto-With-Mushrooms", but the actual file
was called "risotto-with-mushrooms.html".

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1> Odin Recipes </h1>
         <a href="recipes/lasagna.html">Lasagna</a>
-        <a href="recipes/Risotto-with-Mushrooms">Risotto with Mushrooms</a>
+        <a href="recipes/risotto-with-mushrooms.html">Risotto with Mushrooms</a>
     </body>
 
 </html>
