--- a/recipes/risotto-with-mushrooms.html
+++ b/recipes/risotto-with-mushrooms.html
@@ -7,7 +7,13 @@
 </head>
 
 <body>
-    
+    <h1> Description </h1>
+    <p>England was such a joy for me but never more so than when I discovered the many forests and woods full of fungi.<br>  
+        During autumn I like to go to the woods and forage; they are a haven of peace and where I feel at my best.</p>
+    <p>I have passed my passion onto my children and whenever we can at the weekend we will go on mushroom hunts, <br>
+        both girls competing with each other as to who can find the first porcini and who can fill their basket the fastest! </p>   
+    <p>Sometimes, as a treat, I bring the camping stove and we end the day with a mushroom feast, making a wonderful risotto.  <br>
+        If you don’t have wild mushrooms, then use cultivated ones plus dried porcini.</p> 
 </body>
 
 </html>
