--- a/recipes/risotto-with-mushrooms.html
+++ b/recipes/risotto-with-mushrooms.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <!--Description-->
     <h1> Description </h1>
     <p>England was such a joy for me but never more so than when I discovered the many forests and woods full of fungi.<br>  
         During autumn I like to go to the woods and forage; they are a haven of peace and where I feel at my best.</p>
@@ -14,6 +15,24 @@
         both girls competing with each other as to who can find the first porcini and who can fill their basket the fastest! </p>   
     <p>Sometimes, as a treat, I bring the camping stove and we end the day with a mushroom feast, making a wonderful risotto.  <br>
         If you don’t have wild mushrooms, then use cultivated ones plus dried porcini.</p> 
+
+    <!--Ingredients-->
+    <h2> Ingredients </h2>
+    <ul>
+        <li>4 tablespoons extra virgin olive oil</li>
+        <li>1  stick celery, finely chopped</li>
+        <li>1  small onion, finely chopped</li>
+        <li>375 gr arborio rice</li>
+        <li>175 ml dry white wine</li>
+        <li>200 gr mixed mushrooms, wild or cultivated, roughly chopped <br>
+            (if you are using cultivated add 10 gr dried porcini regenerated in water – keep the water)</li>
+        <li>1.5 litres good vegetable stock, kept hot</li>
+        <li>50 gr parmesan cheese, freshly grated & extra for sprinkling</li>
+        <li>50 gr butter</li>
+        <li>salt & pepper to taste</li>
+    </ul>
+
+
 </body>
 
 </html>
