Add a list of steps to the recipe

--- a/recipes/risotto-with-mushrooms.html
+++ b/recipes/risotto-with-mushrooms.html
@@ -17,7 +17,7 @@
         If you don’t have wild mushrooms, then use cultivated ones plus dried porcini.</p> 
 
     <!--Ingredients-->
-    <h2> Ingredients </h2>
+    <h2> Ingredients: </h2>
     <ul>
         <li>4 tablespoons extra virgin olive oil</li>
         <li>1  stick celery, finely chopped</li>
@@ -32,7 +32,19 @@
         <li>salt & pepper to taste</li>
     </ul>
 
-
+    <!--Steps-->
+    <h2> Steps: </h2>
+    <ol>
+        <li>Heat the extra virgin olive oil in a medium heavy-based saucepan.  Add the onion and celery and sweat until softened. </li>
+        <li>Stir in the rice with a wooden spoon and coat each grain with the oil. </li>
+        <li>Add the wine and allow to evaporate. </li>
+        <li>Stir in the mushrooms and regenerated porcini, if using, adding a couple of tablespoons of the water. </li>
+        <li>Add a couple of ladles of hot stock and, stirring continuously, cook until the stock is absorbed.  Add more stock and repeat.  <br>
+            Continue adding stock in this way and stirring, for about 20 minutes until the rice is cooked – it should be soft on the outside but “al dente” on the inside.   </li>
+        <li>Remove from the heat and with a wooden spoon beat in butter and parmesan until the risotto has a creamy consistency. </li>
+        <li>Check for seasoning and if necessary, add some salt & pepper. </li>
+        <li>Leave to rest for one minute, then serve with an extra sprinkling of grated parmesan if desired. </li>
+    </ol>
 </body>
 
 </html>
