Changed to Description headline from h1 to h2, and add a main headline saying the recipe's name

--- a/recipes/risotto-with-mushrooms.html
+++ b/recipes/risotto-with-mushrooms.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
+    <!--headline-->
+    <h1> Risotto with Mushrooms </h1>
+
     <!--Description-->
-    <h1> Description </h1>
+    <h2> Description </h2>
     <p>England was such a joy for me but never more so than when I discovered the many forests and woods full of fungi.<br>  
         During autumn I like to go to the woods and forage; they are a haven of peace and where I feel at my best.</p>
     <p>I have passed my passion onto my children and whenever we can at the weekend we will go on mushroom hunts, <br>
