Attach a picture of the dish to the recipe

--- a/recipes/risotto-with-mushrooms.html
+++ b/recipes/risotto-with-mushrooms.html
@@ -10,6 +10,10 @@
     <!--headline-->
     <h1> Risotto with Mushrooms </h1>
 
+    <!--Picture-->
+    <img src="../img/image-crosp-1170x658.jpg" alt="A closeup picture of a rissoto plate, with some wild mushrooms and leaves 
+    on top, with a fork and spoon on the side of the plate." width="1170" height="658">
+
     <!--Description-->
     <h2> Description </h2>
     <p>England was such a joy for me but never more so than when I discovered the many forests and woods full of fungi.<br>  
