--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1> Odin Recipes </h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <a href="recipes/lasagna.html">Lasagna</a> <br>
         <a href="recipes/risotto-with-mushrooms.html">Risotto with Mushrooms</a>
     </body>
 
