--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     </head>
 
     <body>
+        <!--headline-->
         <h1> Odin Recipes </h1>
-        <a href="recipes/lasagna.html">Lasagna</a> <br>
-        <a href="recipes/risotto-with-mushrooms.html">Risotto with Mushrooms</a>
+
+        <!--recipe links-->
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li> 
+            <li><a href="recipes/risotto-with-mushrooms.html">Risotto with Mushrooms</a></li>
+            <li></li>
+        </ul>
     </body>
 
 </html>
