--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,18 +7,21 @@
     </head>
 
     <body>
+        <!--headline-->
         <h1> Lasagna </h1>
+
+        <!--Picture-->
         <img src="../img/maxresdefault.jpg" alt="a closeup of a lasagna, with fingers holding 
         it from the top and a knife cutting it in half" height="720" width="1280">
 
-        <!--The recipe's description-->
+        <!--description-->
         <h2> Description </h2>
         <p>I'm talking homemade lasagna with fresh pasta, fresh ground meat (ground  at home),
              homemade sauce that will make you cry (in a good way).</p>
         <p>This is  the only recipe you need.</p> 
         <p>It's lasagna, you just can't go wrong with it.</p>
 
-        <!--The ingredients-->
+        <!--ingredients-->
         <h2> Ingredients </h2>
         <ul>
             <li>1lb (450g) ground beef (chuck)</li>
