Add an ingredients list to the chicken wonton soup recipe

--- a/recipes/chicken-wonton-soup.html
+++ b/recipes/chicken-wonton-soup.html
@@ -22,5 +22,35 @@
             really makes this dish. <br>
             This was my breakfast for a whole month in China, and I can't recommend it enough! </p>
 
+        <!--ingredients-->
+        <h2> Ingredients: </h2>
+        <ul>
+            <li>300 grams 10.6 oz of ground chicken</li>
+            <li>200 grams 7 oz of peeled shrimp</li>
+            <li>100 grams 3.5 oz of jiu cai or scallion</li>
+            <li>1.3 big size onion diced</li>
+            <li>18 cloves of garlic</li>
+            <li>2 inches of ginger thinly.</li>
+            <li>3 scallions cut into 2 inches pieces</li>
+            <li>1.5 cup of vegetable oil I am using corn oil</li>
+            <li>1 cinnamon stick</li>
+            <li>2 bay leaves</li>
+            <li>1 star anise</li>
+            <li>2 cloves</li>
+            <li>3 dried red chilies (optional)</li>
+            <li>1.5 tbsp of soy sauce</li>
+            <li>1.5 tbsp of fish sauce</li>
+            <li>1 tbsp of oyster sauce</li>
+            <li>1 tbsp of chinese cooking wine</li>
+            <li>Black pepper to taste</li>
+            <li>1 pack of wonton wrapper 50-55</li>
+            <li>8 cups or 1.9 liters of chicken stock or water</li>
+            <li>1 tbsp of salt to season the broth</li>
+            <li>1/2 cup of cold water to drop the temperature</li>
+            <li>Baby bok choy or other green vegetables</li>
+            <li>Diced scallion as garnish</li>
+            <li>Pickled long beans or other pickles as toppings optional</li>
+        </ul>
+
     </body>
 </html>
