Add a list of steps to the recipe

--- a/recipes/chicken-wonton-soup.html
+++ b/recipes/chicken-wonton-soup.html
@@ -52,5 +52,30 @@
             <li>Pickled long beans or other pickles as toppings optional</li>
         </ul>
 
+         <!--Steps-->
+        <h2> Steps: </h2>
+        <ol>
+            <li>Soak 1 cinnamon stick, 2 bay leaves, 1 star anise, 2 pieces of clove, and 3 pieces of dried red chilies with some hot water for 20 minutes. <br>
+                then drain thoroughly.</li>
+            <li>Dice 1 and 1/3 of a big purple onion.</li>
+            <li>Finely chop 18 cloves of garlic. Optionally, put the garlic in a sieve and rinse it with running water to remove the mercaptans. Dried it with paper towels.</li>
+            <li>Cut 3 scallions into 2 inches long pieces.</li>
+            <li>Slice 2 inches of ginger finely.</li>
+            <li>Dice 100 grams of garlic chive. You can use other types of vegetables if you want. Such as mushrooms, carrots, cabbage, scallion...</li>
+            <li>Pour 1.5 cups of oil into the wok. Add the diced onion. Simmer it on medium-low heat for 5 minutes. Add in the garlic, ginger slices, scallion strips,<br>
+                 and the soaked but well-drained spices. Continue to simmer everything on medium-low heat for another 20 - 30 minutes or until the onion and garlic are lightly golden. <br>
+                 Make sure to stir constantly the whole time.</li>
+            <li>Drain out the oil. Store the oil in a sealable container. It will stay good for 2 months in the fridge.</li>
+            <li>Remove all the spices, scallions, and ginger slices. save the fried onion and garlic for the filling.</li>
+            <li>Roughly diced 200 grams of peeled and deveined shrimp. Add it to a big mixing bowl along with 300 grams of ground chicken thigh.</li>
+            <li>Season with 1.5 tbsp of soy sauce, 1.5 tbsp of fish sauce, 1 tbsp of oyster sauce, 1 tbsp of chinese cooking wine, and some white pepper to taste</li>
+            <li>Stir the protein within 1 direction for 5 minutes to develop the texture. Add the fried aromatics, the diced garlic chives. Keep stirring the filling until everything is well combined.</li>
+            <li>Put some filling in the middle of the wonton wrapper. Gather the edge together and pinch to close it. This recipe is enough to make 50-60 pieces of the wonton.</li>
+            <li>Bing 8 cups of chicken stock to a boil. Season it with some salt by taste. Add the wonton. Cook over medium low heat until the wonton float to the top of the water<br>
+                and the pot should come back to a simmer. Add 1/2 cup of cold water to drop the temperature. Wait for the pot to come back to a simmer again. The total cooking time will take about 8-10 minutes.<br>
+                Optionally, throw in some baby bok choy and you are done.</li>
+            <li>Drizzle in 1-2 tbsp of the aromatic oil. The heat from the soup will reactivate the fragrance. Sprinkle some diced scallion as a garnish.</li>
+        </ol>
+
     </body>
 </html>
