Change the image's src to after renaming it in the img folder

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
         <h1> Lasagna </h1>
 
         <!--Picture-->
-        <img src="../img/maxresdefault.jpg" alt="a closeup of a lasagna, with fingers holding 
+        <img src="../img/lasagna.jpg" alt="a closeup of a lasagna, with fingers holding 
         it from the top and a knife cutting it in half" height="720" width="1280">
         
         <!--link to youtube-->
