Change the simbol for 'half' to '1/2' also on line 81

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -78,7 +78,7 @@
                     <li>If you’re using premade noodles, cook your noodles in the pot until it’s very very al dente.</li>
                 </ul>
             </li>
-            <li>To assemble your lasagna, first grease a 9x13 inch baking pan with butter. Apply a very thin layer of sauce in the bottom to prevent sticking. Then layer your lasagna by placing a layer <br>of pasta sheets, ½ cup of whole milk ricotta, fresh basil leaves, prosciutto di parma, your meat sauce and then a layer of parmigiano-reggiano, fontina and mozzarella. <br>Repeat this layering process until the pan is full.</li>
+            <li>To assemble your lasagna, first grease a 9x13 inch baking pan with butter. Apply a very thin layer of sauce in the bottom to prevent sticking. Then layer your lasagna by placing a layer <br>of pasta sheets, 1/2 cup of whole milk ricotta, fresh basil leaves, prosciutto di parma, your meat sauce and then a layer of parmigiano-reggiano, fontina and mozzarella. <br>Repeat this layering process until the pan is full.</li>
             <li>Top your lasagna with cheese and place on a baking sheet. Put your lasagna in the oven preheated to 350 degrees Fahrenheit and cook for one hour or until nice and brown. <br>Remove from the oven and let it rest for 20-25 minutes.</li>
         </ol>
         
