--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,8 +15,10 @@
         it from the top and a knife cutting it in half" height="720" width="1280">
         
         <!--link to youtube-->
-        <strong>For the original recipe on Youtube by the brilliant J.W:</strong> 
+        <div id="original-link">
+            <strong>For the original recipe on Youtube by the brilliant J.W:</strong> 
         <a href="https://www.youtube.com/watch?v=3JPCVy5cZ_c" target="_blank" rel="noopener noreferrer">Video recipe</a>
+        </div>
 
         <!--description-->
         <h2> Description </h2>
