Add a link to the style.css file in the head

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Lasagna recipe </title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
@@ -15,11 +16,10 @@
         it from the top and a knife cutting it in half" height="720" width="1280">
         
         <!--link to youtube-->
-        <div id="original-link">
-            <strong>For the original recipe on Youtube by the brilliant J.W:</strong> 
+        <div id="original-link">For the original recipe on Youtube by the brilliant J.W:</div> 
         <a href="https://www.youtube.com/watch?v=3JPCVy5cZ_c" target="_blank" rel="noopener noreferrer">Video recipe</a>
-        </div>
 
+        
         <!--description-->
         <h2> Description </h2>
         <p>I'm talking homemade lasagna with fresh pasta, fresh ground meat (ground  at home),
