Change the original-link from ID to class

--- a/recipes/chicken-wonton-soup.html
+++ b/recipes/chicken-wonton-soup.html
@@ -16,8 +16,8 @@
         some Buckchoi, and an asian soup spoon" height="480" width="640">
 
         <!--link to original recipe-->
-        <br><strong>For the original by the graceful SoupedUpRecipes:</strong>
-        <a href="https://www.youtube.com/watch?v=5-5WAmkqlCQ&t=353s" target="_blank" rel="noopener noreferrer">Original recipe</a>
+        <div class="original-link">For the original by the graceful SoupedUpRecipes:
+        <a href="https://www.youtube.com/watch?v=5-5WAmkqlCQ&t=353s" target="_blank" rel="noopener noreferrer">Original recipe</a></div>
 
         <!--description-->
         <h2> Description </h2>
