--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -16,8 +16,9 @@
         it from the top and a knife cutting it in half" height="720" width="1280">
         
         <!--link to youtube-->
-        <div id="original-link">For the original recipe on Youtube by the brilliant J.W:</div> 
+        <div class="original-link">For the original recipe on Youtube by the brilliant J.W:
         <a href="https://www.youtube.com/watch?v=3JPCVy5cZ_c" target="_blank" rel="noopener noreferrer">Video recipe</a>
+        </div> 
 
         
         <!--description-->
