Style index list so it's center aligned

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1> Odin Recipes </h1>
 
         <!--recipe links-->
-        <ul>
+        <ul id="index">
             <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li> 
             <li><a href="recipes/risotto-with-mushrooms.html" target="_blank" rel="noopener noreferrer">Risotto with Mushrooms</a></li>
             <li><a href="recipes/chicken-wonton-soup.html" target="_blank" rel="noopener noreferrer">Chicken Wonton Soup</a></li>
