--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <h1> Odin Recipes </h1>
 
         <!--recipe links-->
-        <ul id="index">
-            <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li> 
-            <li><a href="recipes/risotto-with-mushrooms.html" target="_blank" rel="noopener noreferrer">Risotto with Mushrooms</a></li>
-            <li><a href="recipes/chicken-wonton-soup.html" target="_blank" rel="noopener noreferrer">Chicken Wonton Soup</a></li>
-        </ul>
+        <div class="container">
+            <ul id="index">
+                <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li> 
+                <li><a href="recipes/risotto-with-mushrooms.html" target="_blank" rel="noopener noreferrer">Risotto with Mushrooms</a></li>
+                <li><a href="recipes/chicken-wonton-soup.html" target="_blank" rel="noopener noreferrer">Chicken Wonton Soup</a></li>
+            </ul>
+        </div>
     </body>
 
 </html>
